# mapping2d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/mapping2d/: CMakeLists.txt  CubicVar.cpp  CubicVar.h  ExponentVar.cpp  ExponentVar.h  GaussVar.cpp  GaussVar.h  GaussianRbf.cpp  GaussianRbf.h  InterpolAccessor.h  Interpolators.h  InverseDistanceWeighting.cpp  InverseDistanceWeighting.h  InverseMultiquadraticRbf.cpp  InverseMultiquadraticRbf.h  InverseQuadraticRbf.cpp  InverseQuadraticRbf.h  Isoline.cpp  Isoline.h  IsolineAccessor.h  Isoliner.h  Isovalues.cpp  Isovalues.h  LinearEstimator.h  Mapper.cpp  Mapper.h  Mapping.cpp  Mapping.h  MarchingSquares.cpp  MarchingSquares.h  MatrixCalculator.cpp  MatrixCalculator.h  MethodSettings.h  MultiquadraticRbf.cpp  MultiquadraticRbf.h  OrdinaryKriging.cpp  OrdinaryKriging.h  RbfInterpolator.cpp  RbfInterpolator.h  RegularMesh2d.cpp  (+24 more)
src/mapping2d_qt/: CMakeLists.txt  MapWidget.cpp  MapWidget.h  main_qt.cpp  mapper2d_qt.cpp  mapper2d_qt.h  mapper2d_qt.ui  mapping2d_qt.qrc  mapping2d_qt.vcxproj  mapping2d_qt.vcxproj.filters  pch.h
src/mapping2d_qt/sample/: sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt
src/mapping2d_qt/surfaces/: 0.grd  1.grd  2.grd  3.grd  4.grd  5.grd  6.grd
